--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Mongo Client</title>
@@ -9,7 +10,7 @@
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
-
+  <meta http-equiv="Content-Security-Policy" content="default-src https://codepush.azurewebsites.net 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval';style-src 'self' 'unsafe-inline'; media-src *" />
   <link rel="icon" type="image/png" href="assets/icon/favicon.png">
 
   <!-- add to homescreen for ios -->
@@ -17,7 +18,9 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
